Better python dependency check
Signed-off-by: Stephan Lachnit <stephanlachnit@protonmail.com>

--- a/meson.build
+++ b/meson.build
@@ -2,7 +2,6 @@ project(
   'Setzer',
   version: '0.2.2',
   license: 'GPLv3',
-  meson_version: '>=0.51',
 )
 
 # runtime dependencies
@@ -12,8 +11,19 @@ dependency('poppler-glib')
 dependency('gspell-1')
 
 # python configuration
-python_modules = ['gi']
-py = import('python').find_installation(modules: python_modules)
+python_modules = [
+  'gi',
+]
+if meson.version().version_compare('>=0.51')
+  py = import('python').find_installation(modules: python_modules)
+else
+  py = import('python').find_installation()
+  foreach module: python_modules
+    if run_command(py, '-c', 'import @0@'.format(module)).returncode() != 0
+      error('Failed to find required python module "@0@".'.format(module))
+    endif
+  endforeach
+endif
 
 # configure folders
 bindir = get_option('bindir')
