add bibtex to .desktop file keywords

--- a/data/org.cvfosammmm.Setzer.desktop
+++ b/data/org.cvfosammmm.Setzer.desktop
@@ -4,4 +4,4 @@ Exec=setzer
 Type=Application
 Icon=org.cvfosammmm.Setzer
 Categories=GNOME;GTK;Science;Office;
-Keywords=latex;editor;
+Keywords=latex;bibtex;editor;
