remove some unnecessary imports

--- a/setzer.in
+++ b/setzer.in
@@ -17,13 +17,9 @@
 
 import gi
 gi.require_version('Gtk', '3.0')
-gi.require_version('Gdk', '3.0')
-from gi.repository import Gdk
 from gi.repository import Gtk
-from gi.repository import Gio
-from gi.repository import GLib
 
-import sys, time
+import sys
 import gettext
 
 from setzer.workspace.workspace import Workspace
