Use SPDX 3.0 license identifiers in appdata.xml
Signed-off-by: Stephan Lachnit <stephanlachnit@protonmail.com>

--- a/data/org.cvfosammmm.Setzer.appdata.xml.in
+++ b/data/org.cvfosammmm.Setzer.appdata.xml.in
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <component type="desktop-application">
     <id>org.cvfosammmm.Setzer</id>
-	<metadata_license>CC0-1.0</metadata_license>
-	<project_license>GPL-3.0+</project_license>
+    <metadata_license>CC0-1.0</metadata_license>
+    <project_license>GPL-3.0-or-later</project_license>
 	<content_rating type="oars-1.1" />
 	<name translatable="no">Setzer</name>
 	<summary>Simple yet full-featured LaTeX editor</summary>
