--- a/setzer.in
+++ b/setzer.in
@@ -120,6 +120,7 @@ class MainApplicationController(Gtk.Application):
         settings.set_value('window_state', 'is_maximized', main_window.ismaximized)
         settings.set_value('window_state', 'show_sidebar', self.workspace.show_sidebar)
         settings.set_value('window_state', 'sidebar_paned_position', self.workspace.sidebar_position)
+        settings.set_value('window_state', 'show_help', self.workspace.show_help)
         settings.set_value('window_state', 'show_preview', self.workspace.show_preview)
         settings.set_value('window_state', 'preview_paned_position', self.workspace.preview_position)
         settings.set_value('window_state', 'show_build_log', self.workspace.show_build_log)
