add mime-type in .desktop file

--- a/data/org.cvfosammmm.Setzer.desktop
+++ b/data/org.cvfosammmm.Setzer.desktop
@@ -5,3 +5,4 @@ Type=Application
 Icon=org.cvfosammmm.Setzer
 Categories=GNOME;GTK;Science;Office;
 Keywords=latex;bibtex;editor;
+MimeType=text/x-tex;text/x-bibtex;
