fix incorrect man page dir
Signed-off-by: Stephan Lachnit <stephanlachnit@protonmail.com>

--- a/data/meson.build
+++ b/data/meson.build
@@ -19,5 +19,5 @@ metainfo_file = i18n.merge_file(
 
 install_man(
   files('setzer.1'),
-  install_dir: mandir,
+  install_dir: join_paths(mandir, 'man1'),
 )
