add files argument to exec statement in .desktop file

--- a/data/org.cvfosammmm.Setzer.desktop
+++ b/data/org.cvfosammmm.Setzer.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Setzer
-Exec=setzer
+Exec=setzer %F
 Type=Application
 Icon=org.cvfosammmm.Setzer
 Categories=GNOME;GTK;Science;Office;
