generate autocomplete data in global object

--- a/setzer.in
+++ b/setzer.in
@@ -93,6 +93,7 @@ class MainApplicationController(Gtk.Application):
 
     def activate(self):
         self.workspace = Workspace()
+        ServiceLocator.init_autocomplete_provider(self.workspace)
         DialogLocator.init_dialogs(self.main_window, self.workspace)
 
         # init view
