--- a/setzer.in
+++ b/setzer.in
@@ -22,6 +22,7 @@ from gi.repository import Gio
 
 import sys
 import gettext
+import argparse
 
 from setzer.workspace.workspace import Workspace
 import setzer.workspace.workspace_viewgtk as view
@@ -181,6 +182,11 @@ class MainApplicationController(Gtk.Application):
             self.workspace.save_to_disk()
             self.quit()
 
+
+argparser = argparse.ArgumentParser(usage='%(prog)s [OPTION...] [FILE...]')
+argparser.add_argument('-V', '--version', action='version', version='@setzer_version@')
+argparser.add_argument('file', nargs='*', help=argparse.SUPPRESS)
+argparser.parse_args()
 
 main_controller = MainApplicationController()
 exit_status = main_controller.run(sys.argv)
