--- a/data/org.cvfosammmm.Setzer.appdata.xml.in
+++ b/data/org.cvfosammmm.Setzer.appdata.xml.in
@@ -53,6 +53,11 @@
     </provides>
 
     <releases>
+        <release version="0.3.5" date="2020-10-28">
+            <description>
+                <p translatable="no">Zoom in editor view, show warning when document was deleted on disk, ...</p>
+            </description>
+        </release>
         <release version="0.3.4" date="2020-10-15">
             <description>
                 <p translatable="no">Set editor font, context menu in shortcuts bar, ...</p>
