--- a/data/org.cvfosammmm.Setzer.appdata.xml.in
+++ b/data/org.cvfosammmm.Setzer.appdata.xml.in
@@ -53,6 +53,11 @@
     </provides>
 
     <releases>
+        <release version="0.3.7" date="2020-11-28">
+            <description>
+                <p translatable="no">Performance improvements, ...</p>
+            </description>
+        </release>
         <release version="0.3.6" date="2020-11-8">
             <description>
                 <p translatable="no">Save and build on F5, build in the directory of the LaTeX document being built, .cls and .sty file editing, ...</p>
