--- a/data/org.cvfosammmm.Setzer.appdata.xml.in
+++ b/data/org.cvfosammmm.Setzer.appdata.xml.in
@@ -53,6 +53,11 @@
     </provides>
 
     <releases>
+        <release version="0.3.9" date="2021-1-2">
+            <description>
+                <p translatable="no">Support for links in .pdf preview, new welcome screen, ...</p>
+            </description>
+        </release>
         <release version="0.3.8" date="2020-12-12">
             <description>
                 <p translatable="no">Build button now does save and build, performance improvements, ...</p>
