--- a/data/org.cvfosammmm.Setzer.appdata.xml.in
+++ b/data/org.cvfosammmm.Setzer.appdata.xml.in
@@ -180,7 +180,7 @@
         </release>
         <release version="0.1.4" date="2019-12-28">
             <description>
-                <p translatable="no">References to existing labels in autocomplete, persistent master document state, ...</p>
+                <p translatable="no">References to existing labels in autocomplete, persistent root document state, ...</p>
             </description>
         </release>
         <release version="0.1.3" date="2019-12-21">
@@ -220,7 +220,7 @@
         </release>
         <release version="0.0.4" date="2019-11-11">
             <description>
-                <p translatable="no">Master document function, ...</p>
+                <p translatable="no">Root document function, ...</p>
             </description>
         </release>
         <release version="0.0.3" date="2019-11-6">
