--- a/setzer.in
+++ b/setzer.in
@@ -164,12 +164,12 @@ class MainApplicationController(Gtk.Application):
         self.settings.set_value('window_state', 'height', main_window.current_height)
         self.settings.set_value('window_state', 'is_maximized', main_window.ismaximized)
         self.settings.set_value('window_state', 'show_sidebar', self.workspace.show_sidebar)
-        self.settings.set_value('window_state', 'sidebar_paned_position', self.workspace.sidebar_position)
+        self.settings.set_value('window_state', 'sidebar_paned_position', main_window.sidebar_paned.target_position)
         self.settings.set_value('window_state', 'show_help', self.workspace.show_help)
         self.settings.set_value('window_state', 'show_preview', self.workspace.show_preview)
-        self.settings.set_value('window_state', 'preview_paned_position', self.workspace.preview_position)
+        self.settings.set_value('window_state', 'preview_paned_position', main_window.preview_paned.target_position)
         self.settings.set_value('window_state', 'show_build_log', self.workspace.show_build_log)
-        self.settings.set_value('window_state', 'build_log_paned_position', self.workspace.build_log_position)
+        self.settings.set_value('window_state', 'build_log_paned_position', main_window.build_log_paned.target_position)
         self.settings.pickle()
 
     def on_window_close(self, window=None, parameter=None):
