--- a/setzer.in
+++ b/setzer.in
@@ -19,6 +19,7 @@ import gi
 gi.require_version('Gtk', '3.0')
 from gi.repository import Gtk
 from gi.repository import Gio
+from gi.repository import GLib
 
 import sys
 import gettext
@@ -45,6 +46,8 @@ class MainApplicationController(Gtk.Application):
 
         # get settings
         self.settings = ServiceLocator.get_settings()
+        dm_default = GLib.Variant.new_boolean(self.settings.get_value('preferences', 'prefer_dark_mode'))
+        self.settings.gtksettings.set_property('gtk-application-prefer-dark-theme', dm_default)
 
         # init static variables
         ServiceLocator.init_setzer_version('@setzer_version@')
