--- a/data/org.cvfosammmm.Setzer.appdata.xml.in
+++ b/data/org.cvfosammmm.Setzer.appdata.xml.in
@@ -53,6 +53,11 @@
     </provides>
 
     <releases>
+        <release version="0.4.3" date="2022-2-10">
+            <description>
+                <p translatable="no">Forward synctex from included files, code folding hover effect, ...</p>
+            </description>
+        </release>
         <release version="0.4.2" date="2021-11-21">
             <description>
                 <p translatable="no">Performance improvements, persistent zoom in preview, ...</p>
