document structure sidebar

--- a/setzer.in
+++ b/setzer.in
@@ -166,7 +166,8 @@ class MainApplicationController(Gtk.Application):
         self.settings.set_value('window_state', 'width', main_window.current_width)
         self.settings.set_value('window_state', 'height', main_window.current_height)
         self.settings.set_value('window_state', 'is_maximized', main_window.ismaximized)
-        self.settings.set_value('window_state', 'show_sidebar', self.workspace.show_sidebar)
+        self.settings.set_value('window_state', 'show_symbols', self.workspace.show_symbols)
+        self.settings.set_value('window_state', 'show_document_structure', self.workspace.show_document_structure)
         self.settings.set_value('window_state', 'sidebar_paned_position', main_window.sidebar_paned.target_position)
         self.settings.set_value('window_state', 'show_help', self.workspace.show_help)
         self.settings.set_value('window_state', 'show_preview', self.workspace.show_preview)
