Add control and display_length tags to metainfo
https://www.freedesktop.org/software/appstream/docs/chap-Metadata.html

--- a/data/org.cvfosammmm.Setzer.metainfo.xml.in
+++ b/data/org.cvfosammmm.Setzer.metainfo.xml.in
@@ -52,6 +52,16 @@
         <id>org.cvfosammmm.Setzer.desktop</id>
     </provides>
 
+    <supports>
+      <control>pointing</control>
+      <control>keyboard</control>
+      <control>touch</control>
+    </supports>
+
+    <requires>
+      <display_length compare="ge">768</display_length>
+    </requires>
+
     <releases>
         <release version="55" date="2023-4-8">
             <description>
